--- a/index.html
+++ b/index.html
@@ -1,119 +1,78 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>カーセブンいわき店 査定依頼フォーム</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    body { font-family: sans-serif; padding: 20px; max-width: 600px; margin: auto; background: #fff8e1; }
-    input, textarea, select { width: 100%; padding: 8px; margin: 8px 0; border-radius: 4px; border: 1px solid #ccc; }
-    button { padding: 10px 20px; background: #d32f2f; color: white; border: none; border-radius: 4px; font-weight: bold; }
-    button:hover { background-color: #b71c1c; }
-    .logo { width: 400px; margin-bottom: 20px; }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
-  <img src="a.png" alt="カーセブンロゴ" class="logo" />
+  <h1>カーセブンいわき店 査定依頼フォーム</h1>
 
-  <h1>査定依頼フォーム</h1>
   <form id="sateiForm">
-    <label>お名前</label>
-    <input type="text" name="name" required />
+    <label>お名前（必須）</label>
+    <input type="text" name="name" required><br>
 
-    <label>電話番号</label>
-    <input type="tel" name="phone" required />
+    <label>電話番号（必須）</label>
+    <input type="tel" name="phone" required><br>
 
-    <label>車種</label>
-    <input type="text" name="car" required />
+    <label>車種（必須）</label>
+    <input type="text" name="car" required><br>
 
-    <label>希望日時 1</label>
-    <input type="date" name="date1" required />
-    <select name="time1" required>
-      <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>10:30</option><option>11:00</option><option>11:30</option>
-      <option>12:00</option><option>12:30</option><option>13:00</option><option>13:30</option>
-      <option>14:00</option><option>14:30</option><option>15:00</option><option>15:30</option>
-      <option>16:00</option><option>16:30</option><option>17:00</option><option>17:30</option>
-      <option>18:00</option>
-    </select>
+    <label>希望日時①（必須）</label>
+    <input type="date" name="date1" required>
+    <input type="time" name="time1" required><br>
 
-    <label>希望日時 2</label>
-    <input type="date" name="date2" />
-    <select name="time2">
-      <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>10:30</option><option>11:00</option><option>11:30</option>
-      <option>12:00</option><option>12:30</option><option>13:00</option><option>13:30</option>
-      <option>14:00</option><option>14:30</option><option>15:00</option><option>15:30</option>
-      <option>16:00</option><option>16:30</option><option>17:00</option><option>17:30</option>
-      <option>18:00</option>
-    </select>
+    <label>希望日時②（任意）</label>
+    <input type="date" name="date2">
+    <input type="time" name="time2"><br>
 
-    <label>希望日時 3</label>
-    <input type="date" name="date3" />
-    <select name="time3">
-      <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>10:30</option><option>11:00</option><option>11:30</option>
-      <option>12:00</option><option>12:30</option><option>13:00</option><option>13:30</option>
-      <option>14:00</option><option>14:30</option><option>15:00</option><option>15:30</option>
-      <option>16:00</option><option>16:30</option><option>17:00</option><option>17:30</option>
-      <option>18:00</option>
-    </select>
+    <label>希望日時③（任意）</label>
+    <input type="date" name="date3">
+    <input type="time" name="time3"><br>
 
-    <label>その他ご要望</label>
-    <textarea name="other" rows="4"></textarea>
+    <label>その他ご要望（任意）</label>
+    <textarea name="other" rows="4"></textarea><br>
 
     <button type="submit">送信する</button>
   </form>
 
-  <p id="result"></p>
-
   <script>
-    const form = document.getElementById('sateiForm');
-    form.addEventListener('submit', e => {
+    document.getElementById('sateiForm').addEventListener('submit', function(e) {
       e.preventDefault();
-      const formData = new FormData(form);
-      const data = {};
-      formData.forEach((value, key) => (data[key] = value));
 
-      // 水曜と時間帯のバリデーション
-      const validate = (date, time) => {
-        if (!date || !time) return true;
-        const dt = new Date(`${date}T${time}`);
-        const day = dt.getDay();
-        const h = dt.getHours();
-        const m = dt.getMinutes();
-        if (day === 3) return false;
-        if (h < 10 || (h === 18 && m > 30) || h > 18) return false;
-        if (![0, 30].includes(m)) return false;
-        return true;
+      const form = e.target;
+      const data = {
+        name: form.name.value,
+        phone: form.phone.value,
+        car: form.car.value,
+        date1: form.date1.value,
+        time1: form.time1.value,
+        date2: form.date2.value,
+        time2: form.time2.value,
+        date3: form.date3.value,
+        time3: form.time3.value,
+        other: form.other.value
       };
 
-      if (![1,2,3].every(i => validate(data[`date${i}`], data[`time${i}`]))) {
-        alert('希望日時は水曜以外の10:00〜18:30、30分単位で選択してください。');
-        return;
-      }
-
-      fetch("https://script.google.com/macros/s/AKfycbyAPYxyMXr8KQ_97KoUKg_w3TY6ZhXbQd4kvy_MepcWNDUDtPHSgKGJt5uQ-Jrv5Zvh/exec", {
+      fetch('https://script.google.com/macros/s/AKfycbwCLSW_9bxTWHLsudqWNCyVlZa8smF-6gi_am4ZV4S5BIXekuU5IcrFSdO6FTwubYU/exec', {
         method: 'POST',
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({ contents: data })
+        body: JSON.stringify(data)
       })
-        .then(res => res.json())
-        .then(res => {
-          if (res.result === 'success') {
-            alert("ありがとうございます！受付が完了いたしました。");
-            form.reset();
-          } else {
-            alert("送信に失敗しました。");
-          }
-        })
-        .catch(err => {
+      .then(res => res.json())
+      .then(res => {
+        if (res.result === 'success') {
+          alert("ありがとうございます！受付が完了しました。");
+          form.reset();
+        } else {
           alert("送信に失敗しました。");
-        });
+        }
+      })
+      .catch(() => {
+        alert("送信に失敗しました。");
+      });
     });
   </script>
+
 </body>
 </html>
